Resize images, fix text alignment to full justify with center last line, flex entire second section

--- a/style.css
+++ b/style.css
@@ -69,13 +69,17 @@ button {
     flex: 1 1 auto;
 }
 
+.section2 {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
 .information-header {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     margin: 32px 0;
 }
 
@@ -89,19 +93,20 @@ button {
     display: flex;
     flex-direction: column;  
     margin: 16px;
-    width: 160px;
+    width: 170px;
 }
 
 img {
-    width: 160px;
-    height: 160px;
+    height: 170px;
     overflow: hidden;
     border-radius: 5px;
     margin-bottom: 12px;
 }
 
 .caption {
-    font-size: 18px;
-    text-align: center;
+    font-size: 20px;
+    text-align: justify;
+    text-align-last: center;
     text-wrap: wrap;
 }
+
